modules/k8s/env/k3s/httpd/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-apache
  namespace: cv
spec:
  selector:
    matchLabels:
      application: cv
      entorn: pro
      tecnologia: apache
      tier: frontal
  template:
    metadata:
      labels:
        application: cv
        entorn: pro
        tecnologia: apache
        tier: frontal
    spec:
      affinity: {}
      containers:
        - image: httpd
          imagePullPolicy: Always
          name: apache
          ports:
            - containerPort: 80
              name: 80tcp
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 128Mi
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs
              name: cv-apache
      volumes:
        - name: cv-apache
          persistentVolumeClaim:
            claimName: cv-apache
        - name: vol-rzxxk
          persistentVolumeClaim:
            claimName: cv-apache
