modules/k8s/env/k3s/httpd/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-apache
  namespace: cv
  labels:
    application: cv
    entorn: pro
    tecnologia: apache
    tier: frontal
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    application: cv
    entorn: pro
  type: ClusterIP
