modules/k8s/env/k3s/httpd/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-apache
  namespace: cv
spec:
  defaultBackend:
    service:
      name: cv-apache
      port:
        number: 80
  rules:
    - host: cv.domain.com
      http:
        paths:
          - backend:
              service:
                name: cv-apache
                port:
                  number: 80
            path: /
            pathType: Prefix
